--- a/Angeles.html
+++ b/Angeles.html
@@ -70,7 +70,7 @@
               </nav>
                       
                       <nav class ="navbar">
-                        <img src="https://i.pinimg.com/originals/33/7f/c3/337fc32dcb7e4526e3d5108de5c96d10.jpg" style="height: 119px; min-width: 100%;max-width: 1500px"/>
+                        <img src="https://img.freepik.com/vector-premium/fondo-abstracto-rayas-inclinadas-colores-negros_444390-18030.jpg?w=2000" style="height: 119px; min-width: 100%;max-width: 1500px"/>
               </nav>
           
               <div class ="sidebar1">
